Remove embedded styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,40 +14,13 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- My custom styles -->
-    <style>
-    header.masthead {
-      border-bottom: 3px solid #ccc;
-      margin-bottom: 20px;
-    }
-
-    .masthead h1 {
-      font-size: 4em;
-      line-height: 0.7;
-      margin-top: 50px;
-    }
-
-    .masthead small {
-      text-transform: uppercase;
-      font-size:.4em;
-    }
-
-    .masthead img {
-      margin: -10px
-    }
-
-    #sidebar {
-      margin-bottom: 20px;
-    }
-
-    .nav-pills > li.active > a, .nav-pills > li.active > a:focus, .nav-pills > li.active > a:hover {
-      background-color: #fe3c63;
-    }
-    </style>
+    <link href="css/ca-custom.css" rel="stylesheet">
   </head>
 
   <body>
 
     <div class="container">
+      
       <header class="masthead">
         <img src="placeholder-logo.png" height="200" width="200" alt="logo">
         <h1 class="pull-right text-right">Chris Alfonso <br>
