update to use rows/columns as indicated in code review

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,11 +19,13 @@
   <body>
 
     <div class="container">
-      
-      <header class="masthead">
-        <img src="placeholder-logo.png" height="200" width="200" alt="logo">
-        <h1 class="pull-right text-right">Chris Alfonso <br>
-          <small>Fullstack Developer</small></h1>
+      <!-- updated per code review -->
+      <header class="masthead row">
+        <div class="col-md-12">
+          <img src="placeholder-logo.png" height="200" width="200" alt="logo">
+          <h1 class="pull-right text-right">Chris Alfonso <br>
+            <small>Fullstack Developer</small></h1>
+        </div>
       </header>
 
       <section id="sidebar" class="pull-right">
@@ -57,8 +59,11 @@
         </div>
       </section>
 
-      <footer class="footer">
-        <p>&copy; 2017 Chris Alfonso</p>
+      <!-- updated per code review -->
+      <footer class="footer row">
+        <div class="col-md-12">
+          <p>&copy; 2017 Chris Alfonso</p>
+        </div>
       </footer>
 
     </div> <!-- /container -->
