update to use grid on elements
Wrap featured image and subtitle in grid system. Replaced <section id="main"> with <main>

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,9 +37,14 @@
         </ul>
       </section>
 
-      <section id="main">
-        <img src="http://lorempixel.com/1140/300" alt="banner" class="img-responsive">
-        <h2>Featured Work</h2>
+      <!-- updated per code review -->
+      <main>      
+        <div class="row">
+          <div class="col-md-12">
+            <img src="http://lorempixel.com/1140/300" alt="banner" class="img-responsive">
+            <h2>Featured Work</h2>
+          </div>
+        </div>
         <div class="row">
           <div class="col-md-4">
             <img src="http://lorempixel.com/360/200/technics" alt="technology" class="img-responsive">
@@ -57,7 +62,7 @@
             <p>LMS administration and development, Classroom technologies</p>
           </div>
         </div>
-      </section>
+      </main>
 
       <!-- updated per code review -->
       <footer class="footer row">
